# code128

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: svg.rs  unicode.rs
src/: decode.rs  encode.rs  latin1.rs  lib.rs  unicode.rs
